# libprotobuf-mutator

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/learning/: CMakeLists.txt  README.md
examples/learning/1_simple_protobuf/: CMakeLists.txt  test_proto.cc
examples/learning/2_libprotobuf_libfuzzer/: CMakeLists.txt  lpm_libfuzz.cc
examples/learning/3_libprotobuf_libfuzzer_custom_mutator/: CMakeLists.txt  lpm_libfuzz_custom_mutator.cc
examples/learning/4_libprotobuf_aflpp_custom_mutator/: CMakeLists.txt  lpm_aflpp_custom_mutator.h
examples/learning/5_libprotobuf_aflpp_custom_mutator_input/: CMakeLists.txt  lpm_aflpp_custom_mutator_input.h  test_proto_serializer.cc
src/libfuzzer/: libfuzzer_mutator.cc
